# milgram-experiments

./: .gitignore  Dockerfile  Makefile  README.md  env.example  pyproject.toml  pytest.ini
results/: experiment_005e8285-c019-4c81-bc61-d4c9d84981cb.json  experiment_005e8285-c019-4c81-bc61-d4c9d84981cb_raw.json  experiment_008b0951-88d4-4b9b-a49b-b88448983355.json  experiment_008b0951-88d4-4b9b-a49b-b88448983355_raw.json  experiment_035fc2d9-4559-4d7e-99f5-7d501243873b.json  experiment_035fc2d9-4559-4d7e-99f5-7d501243873b_raw.json  experiment_06669518-48de-4b80-a93f-e115b1647414.json  experiment_06669518-48de-4b80-a93f-e115b1647414_raw.json  experiment_06ef6fad-79b2-46dd-986e-4a65db00ee60.json  experiment_06ef6fad-79b2-46dd-986e-4a65db00ee60_raw.json  experiment_0a422931-cb97-409a-af02-a46fe66a59be.json  experiment_0a422931-cb97-409a-af02-a46fe66a59be_raw.json  experiment_0d038ff5-10c0-4a3b-a4e2-aa3dae92e5fe.json  experiment_0d038ff5-10c0-4a3b-a4e2-aa3dae92e5fe_raw.json  experiment_0e688fa0-3853-4f1e-9f27-bb3980647d05.json  experiment_0e688fa0-3853-4f1e-9f27-bb3980647d05_raw.json  experiment_0e9d3959-7019-4d87-b4d7-502200aed352.json  experiment_0e9d3959-7019-4d87-b4d7-502200aed352_raw.json  experiment_0ea21661-4fae-4411-8191-0d84ff662fd2.json  experiment_0ea21661-4fae-4411-8191-0d84ff662fd2_raw.json  experiment_1060620e-46eb-4242-b6b5-6406b478c6ac.json  experiment_1060620e-46eb-4242-b6b5-6406b478c6ac_raw.json  experiment_10ce7cf2-c5c5-4982-b0dd-8f30ad28eb9d.json  experiment_10ce7cf2-c5c5-4982-b0dd-8f30ad28eb9d_raw.json  experiment_1142189d-863a-4e12-a302-8f61a1e10938.json  (+227 more)
(+25 files in other folders)
